--- a/src/pages/moodboard/styles.module.css
+++ b/src/pages/moodboard/styles.module.css
@@ -15,6 +15,7 @@
     color: white;
     font-family: 'Tilt Prism', cursive;
     font-size: 60px;
+    text-align: center;
     text-shadow: 0 0 20px black;
 }
 
